# Picksy

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
src/picksy/: __init__.py  main.py
