[tool.poetry]
name = "picksy"
version = "0.1.0"
description = "Picksy. Python picker module with a simple search."
authors = ["Paul Glushak (hxii) <paul@glushak.net>"]
license = "MIT"
packages = [
    { include = "picksy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
